# webscraper

./: .env.example  .gitignore  Makefile  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  render.yaml
.claude/: settings.local.json
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-tools.txt  requirements.txt
backend/app/: __init__.py  main.py  scraper.py
backend/app/api/: router.py
backend/app/api/v1/: __init__.py  admin_bidfax.py  admin_domain_policies.py  admin_motor3d.py  admin_settings.py  campaigns.py  exports.py  health.py  jobs.py  projects.py  settings.py  topics.py
backend/app/connectors/: motor3d.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_add_result_storage_fields.py  0003_add_topic_campaigns.py  0004_add_topics.py  0005_add_settings.py  0006_extend_projects.py  0007_add_exports.py  0008_add_topic_to_jobs.py  0009_add_topic_metadata.py  0010_add_blocked_job_status.py  0011_add_domain_policies.py  0012_add_scrape_policy_fields.py  0013_add_products_table.py  0014_add_product_project_fk.py  0015_add_project_pause_and_job_task_id.py
backend/app/models/: __init__.py  crawled_page.py  domain_policy.py  export.py  job.py  mixins.py  product.py  project.py  result.py  setting.py  topic.py  topic_campaign.py  topic_url.py
backend/app/schemas/: __init__.py  base.py  campaign.py  domain_policy.py  export.py  job.py  motor3d.py  project.py  proxy_settings.py  result.py  setting.py  topic.py
backend/app/services/: __init__.py  bidfax_connector.py  campaigns.py  crawled_pages.py  domain_policy.py  export_generator.py  exports.py  jobs.py  products.py  projects.py  proxy_config.py  proxy_manager.py  results.py  search_provider.py  settings.py  stealth_browser.py  storage.py  topic_urls.py  topics.py  url_validator.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: __init__.py  db_ping.py  migrate.py  test_motor3d_discover.py
backend/tests/: test_motor3d.py
docs/: summary.md
frontend/: .eslintrc.json  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/admin/connectors/bidfax/: page.tsx
frontend/src/app/admin/connectors/motor3d/: page.tsx
frontend/src/app/admin/domain-policies/: page.tsx
frontend/src/app/admin/policies/: page.tsx
frontend/src/app/campaigns/: page.tsx
frontend/src/app/campaigns/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/topics/: page.tsx
frontend/src/app/topics/[id]/: page.tsx
frontend/src/components/: json-viewer.tsx
frontend/src/hooks/: useCampaignPages.ts  useCampaigns.ts  useJobResult.ts  useJobs.ts  useProjects.ts  useProxySettings.ts  useTopicUrls.ts  useTopics.ts
frontend/src/lib/: api-client.ts
scripts/: dev.mjs  policy_smoke_test.py
